modification de la page d'index

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NSQuiz</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div class="head-logo logo">
-            <img src="/images/logo.png" alt="image">
+            <img src="images/logo.png" alt="image">
         </div>
         <h1>NADERPLUS SOLUTION QUIZ</h1>
         </div>
@@ -43,7 +43,7 @@
     </footer> 
    -->
 
-    <script src="/js/quiz.js"></script>
+    <script src="js/quiz.js"></script>
 </body>
 
 </html>
