css et html modifier

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </div>
     </header>
 
-
+<div class="container">
+    
     <div class="container-quiz">
         <h2>QUIZ BIBLIQUE FACILE ET RAPIDE</h2>
 
@@ -27,9 +28,10 @@
         </div>
         <div id="response" class="response"></div>
         <div id="result" class="result"></div>
-<a href=""></a>
+        <a href=""></a>
 
     </div>
+</div>
 
 
     <!--
